Updated CMake File and Readme.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,9 +254,9 @@ elseif(APPLE)
   include_directories(${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/include)
   file(GLOB FFMPEG_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/lib/OSX/*.a)
 else()
-  find_package(FFMPEG REQUIRED)
-  #string(REPLACE "/usr/include/" "" FFMPEG_INCLUDE_DIR "${FFMPEG_INCLUDE_DIR}")
-  include_directories(${FFMPEG_INCLUDE_DIR})
+  include_directories(${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/include)
+  file(GLOB FFMPEG_LIBRARIES ${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/lib/Unix/*.a)
+  add_definitions(-D__STDC_CONSTANT_MACROS)
 endif()
 
 # FluoRender
@@ -591,7 +591,8 @@ if(APPLE)
     FREETYPE_LIBRARIES ${FREETYPE_LIBRARIES})
   message(STATUS "${FREETYPE_LIBRARIES}")
 elseif(UNIX OR MINGW)
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lpthread -ldl")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lpthread")
+  set(CMAKE_CXX_STANDARD_LIBRARIES "-ldl -lz -llzma -lm -L${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/lib/Unix/ -lavformat -lavcodec -lswscale -lswresample -lavutil")
 endif()
 
 target_compile_options(FluoRender PRIVATE "$<$<CONFIG:RELEASE>:${RELEASE_FLAGS}>")
