Added quick fixes to CMakeLists.txt file for OSX to compile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -581,7 +581,8 @@ endif()
 
 if(APPLE)
   set(CMAKE_EXE_LINKER_FLAGS "-L/usr/local/lib -L/usr/lib ${CMAKE_EXE_LINKER_FLAGS} -lbz2 -framework OpenCL -framework CoreFoundation -framework CoreVideo -framework VideoDecodeAcceleration -framework VideoToolbox -framework Security -framework CoreMedia")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmacosx-version-min=10.9 -DWX_PRECOMP -std=c++11 -stdlib=libc++")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWX_PRECOMP -std=c++11 -stdlib=libc++")
+  set(CMAKE_CXX_STANDARD_LIBRARIES "-lpthread -lz -L${FluoRender_SOURCE_DIR}/fluorender/ffmpeg/lib/OSX/ -liconv -lavformat -lavcodec -lswscale -lswresample -lavutil")
   # make sure png is static linked
   string(REGEX REPLACE "-lpng" "/usr/local/lib/libpng.a"
     wxWidgets_LIBRARIES ${wxWidgets_LIBRARIES})
